--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <h1>OUTPUT CONSOLE</h1>
+<h2>The given input is arrranged in ascending order</h2>
 <script>
 let b,a=[10],temp;
 for(let i=0;i<10;i++){
