--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <h1>OUTPUT CONSOLE</h1>
 <h2>The given input is arrranged in ascending order</h2>
-<script>
+<h2><script>
 let b,a=[10],temp;
 for(let i=0;i<10;i++){
 b=Number(prompt("Enter The ID Of"+" "+(i+1)+" "+"Employee"));
@@ -14,4 +14,4 @@ temp=a[j];
 a[j]=a[w];
 a[w]=temp;}}}
 document.write("[",a,"]");
-</script></body></html>
+ </script></h2></body></html>
