--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>OUTPUT CONSOLE</h1>
+<h1>OUTPUT CONSOLE:</h1>
 <h2>The given input is arrranged in ascending order</h2>
 <h2><script>
 let b,a=[10],temp;
